# context-aware-sticky-trap-insect-monitoring

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: active_learning.yaml  baseline_image_only.yaml  context_aware.yaml  leave_one_color_out.yaml  leave_one_device_out.yaml  smoke.yaml
data/: README.md  metadata_template.csv
docs/: DATASET_CARD.md  EXPERIMENT_PLAN.md  RESEARCH_RATIONALE.md
reports/: README.md
scripts/: audit_manifest.py  build_manifest.py  download_figshare.py  make_smoke_dataset.py
src/insect_context_ai/: __init__.py  active_learning.py  config.py  experiment.py  explain.py  train.py
src/insect_context_ai/data/: __init__.py  dataset.py  encoders.py  manifest.py  splits.py  transforms.py
src/insect_context_ai/models/: __init__.py  backbones.py  classifier.py
src/insect_context_ai/training/: __init__.py  engine.py  metrics.py  plots.py
src/insect_context_ai/utils/: __init__.py  io.py  reproducibility.py
tests/: test_active_learning.py  test_config.py  test_encoders.py  test_end_to_end.py  test_explain.py  test_manifest.py  test_metrics.py  test_model.py  test_splits.py
