[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insect-context-ai"
version = "0.4.0"
description = "A reproducible PyTorch project for context-aware insect recognition, domain-shift evaluation, active learning, and Grad-CAM."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
  {name = "Amir Mohammad Mahmoudinia"}
]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "Pillow>=10,<13",
  "PyYAML>=6,<7",
  "scikit-learn>=1.4,<2",
  "matplotlib>=3.8,<4",
  "torch>=2.2,<3",
  "torchvision>=0.17,<1",
  "tqdm>=4.66,<5",
  "requests>=2.31,<3",
]

[project.urls]
Repository = "https://github.com/AMIRMAHMOUDINIA/context-aware-sticky-trap-insect-monitoring"
Issues = "https://github.com/AMIRMAHMOUDINIA/context-aware-sticky-trap-insect-monitoring/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
insect-train = "insect_context_ai.train:main"
insect-active-learning = "insect_context_ai.active_learning:main"
insect-explain = "insect_context_ai.explain:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
